# sdl3_helper

./: CMakeLists.txt  LICENSE  README.md  conanfile.py  test_main.cpp
SDL3_image/: CMakeLists.txt
SDL_image/: CMakeLists.txt
include/: AnimatedTexture.hpp  AudioPlayer.hpp  Button.hpp  GlobalSingleton.hpp  IClickable.hpp  SharedCtx.hpp  Texture.hpp  TextureManager.hpp  Transform.hpp  structs.hpp  test.hpp  yoshi.hpp
src/: AnimatedTexture.cpp  CMakeLists.txt  GlobalSingleton.cpp  SharedCtx.cpp  Texture.cpp  Transform.cpp  new_main.cpp  structs.cpp  test.cpp  test_main.cpp  yoshi.cpp
